21->25 hardening: P15/P16 principles, proactive Lombok/Kotlin, scorer + harness fixes
Contract (AGENTS.md): add cross-cutting Principles cluster P15 (no pre-defense)
+ P16 (reproduce->root-cause->fix->rerun-clean), imported from great-java-review;
P1 cluster-map updated; existing P2-P14 refs untouched.

21->25 rung2 prompt: Lombok made PROACTIVE (floor 1.18.46 + maven.compiler.proc=full,
gated on org.projectlombok use); correct Kotlin guidance (>=2.3.x; 2.2.x falls back
to JVM 24; KSP version-locked); multi-module Maven per-module target via
ChangePropertyValue (UpgradeJavaVersion only bumps the root -> silent target miss).

Harness: bapply uses absolute configLocation (multi-module fix) + names the
rewrite-java-dependencies coordinate; rung2_drive sets BJV_REWRITE_DEPS for the 25 hop;
rung1lib r1_gate uses persistent BJV_FROM/BJV_TO (P16: was the scope-fragile FROM/TO).

Scorer (tools/score.py): passet keys on the TEST-<FQCN>.xml filename + norm strips
{} too -> fixes parametrized-test false-FAILs (metis 3906->0); CWE no longer defaults
an unscannable project to clean (returns -1 unknown, P16); surface swallowed parse
errors. oh_run.py: drop pre-limits (no-change 300s->1yr, iter cap->maxsize, P15).

Adds detect-java-version router skill + the rung2 harness (prompts/bin/drivers) to
git; also folds prior uncommitted v2-pipeline fixes (check_program/generate_program/
v2_run/catalog/per-hop SKILL.md).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>